
class board {


    setSizeFx;

    setsetSizeFx(fx) {
        this.setSizeFx = fx;
    }

}

export default board;