@startuml Game Class Diagram


game "1" *-- "1" board : contains
game "1" *-- "2" player: contains
game "1" *-- "1" gameStatus: contains
game "1" *-- "1" matrix: contains
matrix "1" *-- "size" matrixRow: contains
matrixRow "1" *-- "size" matrixCell: contains
matrix "1" - "1" board:contains
board "1" *-- "size" boardRow: contains
boardRow "1" *-- "size" boardCell: contains
matrixCell <. boardCell: Dependency

'note "'cells' is a size x size array of arrays" as n1'
'note "'setBoardSize()' needs a warning prompt in case of game in progress" as n2'
note "JavaScript classes (Model)" as n3
note "React Components (View / Controllers)" as n4

'n1 .. matrix'
'n2 .. game'
n3 -- game
n4 -- gameComponent

'JavaScript Classes (Model)'

class game {
    Number turn
    player playerTurn
    void setBoardSize()
    void clicked(Number i, Number j)
    void moveAnalyze()
}


class board{
    Number size
    Bool bgImage
    String bgColor
    createBoardRow(Number size,)
}

class boardRow{
    Number size
    Number index
}

class boardCell{
    Number i
    Number j
    String bgColor
    String hoverColor
    matrixCell c
}

class player{
    String name
    String color
    Bool hints
    Number id
    String getColor()

}

class gameStatus{
    String timerCountText
    String timerButtonText
    Number ctrlBoardSize
    void setCtrlBoardSize()
}

gameStatus "1" -- "1" timer: contains
gameStatus "1" -- "1" boardSize: contains
gameStatus "1" -- "1" boardColor: contains

class timer{

}

class boardSize{

}

boardSize "1" .> "1" timer: dependency

class boardColor{

}

class matrix{
    Number size
    Array[] cells
    setCell()
}

class matrixRow{
    Number size
    matrixCell cell
    getCell()
}

class matrixCell{
    Bool claimed
    player owner
    Number turnClaimed
    player getOwner()
}


'React Components (View / Controller)'

gameComponent "1" *-- "1" boardComponent: contains
boardComponent "1" *-- "size" boardRowComponent: contains
boardRowComponent "1" *-- "size" boardCellComponent: contains
gameComponent "1" *-- "2" playerStatusTable: contains
gameComponent "1" *-- "1" gameStatusTable: contains
gameStatusTable "1" *-- "1" timerComponent: contains
gameStatusTable "1" *-- "1" boardSizeComponent: contains
gameStatusTable "1" *-- "1" boardColorComponent: contains

component boardComponent{

}

component gameComponent{

}

component boardRowComponent{

}

component boardCellComponent{

}

component playerStatusTable{

}

component gameStatusTable{

}

component timerComponent{

}

component boardSizeComponent{

}

component boardColorComponent{

}

boardComponent "1" - "1" board
playerStatusTable "1" - "1" player
boardRowComponent "1" - "1" boardRow
boardCellComponent "1" - "1" boardCell
gameStatusTable "1" - "1" gameStatus
timerComponent "1" - "1" timer

@enduml